minor tweak to exponentiation_assignment.html

--- a/html/exponentiation_assignment.html
+++ b/html/exponentiation_assignment.html
@@ -22,9 +22,9 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-<noscript>
-  <link rel="stylesheet" href="../css/nojs.css">
-</noscript>
+    <noscript>
+        <link rel="stylesheet" href="../css/nojs.css">
+    </noscript>
 
 </head>
 
@@ -61,7 +61,7 @@
 
             <main>
                 <article>
-<noscript><span>This Web Site requires JavaScript!</span></noscript>
+                    <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The exponentiation assignment (**=) operator performs exponentiation on the two operands and
@@ -123,7 +123,8 @@ console.log(y **= 0)</pre><!-- code-content -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-let y = 9 console.log(y **= "hello");
+let y = 9 
+console.log(y **= "hello");
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
