update content in let_var.html

--- a/html/let_var.html
+++ b/html/let_var.html
@@ -519,9 +519,43 @@ for(let el of [1, "tom", 10]) {
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
+100
+100
 100 </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
+100
+100
 100 </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+for(let el of [1,"tom", 10]) {
+  console.log(el)
+  let el = 100;
+  console.log(el);
+} </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+Uncaught ReferenceError: 
+  Cannot access 'el' before initialization </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+Uncaught ReferenceError: 
+  Cannot access 'el' before initialization </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
