--- a/html/logical_and.html
+++ b/html/logical_and.html
@@ -388,19 +388,21 @@ console.log(a,b) </pre><!-- code-content -->
             </summary>
             <pre class="details-console-aclass small-view">
 11 20
+'hello world'
 13 22 </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
 11 20
+'hello world'
 13 22 </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
         </article>
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
 var a = 10
 var b = 11
 var c = 11
@@ -412,83 +414,83 @@ console.log(b)
 console.log(c)
 
 console.log(result) </pre><!-- code-content -->
-    </details><!--details CODE-->
+          </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+          <br class="small-view">
+          <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
 11
 12
 11 
 
 false</pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
+            <pre class="details-console-aclass wide-view">
 11
 12
 11 
 
 false</pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+          </details><!--details CONSOLE -->
 
-</article>
+        </article>
 
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
 INSERT CODE TWO
   </pre><!-- code-content -->
-    </details><!--details CODE-->
+          </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+          <br class="small-view">
+          <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
 INSERT CONSOLE OUTPUT TWO (small view) 
 </pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
+            <pre class="details-console-aclass wide-view">
 INSERT CONSOLE OUTPUT TWO (wide view) 
 </pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+          </details><!--details CONSOLE -->
 
-</article>
+        </article>
 
-<article>
-    <h1 class="count">Code Example</h1>
-    <details open><!--details CODE-->
-        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-        <pre class="details-code-aclass">
+        <article>
+          <h1 class="count">Code Example</h1>
+          <details open><!--details CODE-->
+            <summary class="details-code-summary">[JavaScript Inserts]</summary>
+            <pre class="details-code-aclass">
 INSERT CODE THREE
   </pre><!-- code-content -->
-    </details><!--details CODE-->
+          </details><!--details CODE-->
 
-    <br class="small-view">
-    <br class="wide-view">
+          <br class="small-view">
+          <br class="wide-view">
 
-    <details open><!--Details CONSOLE -->
-        <summary class="details-console-summary">
-            [JavaScript Inserts]
-        </summary>
-        <pre class="details-console-aclass small-view">
+          <details open><!--Details CONSOLE -->
+            <summary class="details-console-summary">
+              [JavaScript Inserts]
+            </summary>
+            <pre class="details-console-aclass small-view">
 INSERT CONSOLE OUTPUT THREE (small view) 
 </pre><!-- small-view -->
-        <pre class="details-console-aclass wide-view">
+            <pre class="details-console-aclass wide-view">
 INSERT CONSOLE OUTPUT THREE (wide view) 
 </pre><!-- wide-view -->
-    </details><!--details CONSOLE -->
+          </details><!--details CONSOLE -->
 
-</article>
+        </article>
         <!--here-->
 
         <article>
