update answers to correct logical errors in logical_or.html

--- a/html/logical_or.html
+++ b/html/logical_or.html
@@ -280,9 +280,11 @@ console.log(a,b) </pre><!-- code-content -->
             </summary>
             <pre class="details-console-aclass small-view">
 11 20
+"hello world"
 12 21 </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
 11 20
+"hello world"
 12 21</pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
@@ -313,9 +315,11 @@ console.log('hello world')
             </summary>
             <pre class="details-console-aclass small-view">
 11 20
+"hello world"
 13 22 </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
 11 20
+"hello world"
 13 22 </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
 
