update content in logical_not.html

--- a/html/logical_not.html
+++ b/html/logical_not.html
@@ -100,8 +100,7 @@
           <details open><!--details CODE-->
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
-!false
-              </pre><!-- code-content -->
+!false </pre><!-- code-content -->
           </details><!--details CODE-->
 
           <br class="small-view">
