add alphabetical mnemonic to reserved_keywords.html

--- a/html/reserved_keywords.html
+++ b/html/reserved_keywords.html
@@ -542,8 +542,7 @@ with </pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE TWO
-  </pre><!-- code-content -->
+Alphabetical Order </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -554,11 +553,9 @@ INSERT CODE TWO
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
+BCDEF -> I -> N -> RST -> VW </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
+BCDEF -> I -> N -> RST -> VW </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
