update content in try_catch.html

--- a/html/try_catch.html
+++ b/html/try_catch.html
@@ -72,18 +72,19 @@
                     <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
-                        <li>The try...catch statement is comprised of
+                        <li>The <code>try...catch</code> statement is comprised of
                             <ol>
-                                <li>a try block
-                                <li>either a catch block <em>or</em> a finally block
-                                <li>both a catch block <em>and</em> a finally block
+                                <li>a <code>try</code> block
+                                <li>either a <code>catch</code> block <em>or</em> a <code>finally</code> block
+                                <li>both a <code>catch</code> block <em>and</em> a <code>finally</code> block
                             </ol>
                         <li>
                             The code in
                             the <strong>try block</strong> is executed first, and if it throws an exception, the code in
                             the <strong>catch block</strong> will be executed
                         <li>
-                            The code in the finally block will always be executed before control flow exits the entire
+                            The code in the <code>finally</code> block will always be executed before control flow exits
+                            the entire
                             construct
                         <li>
                             This gives us three forms for the try statement:
@@ -93,7 +94,8 @@
                                 <li><code>try...catch...finally</code>
                             </ol>
                         <li>
-                            Unlike other constructs such as if or for, the try, catch, and finally blocks must be
+                            Unlike other constructs such as <code>if</code> or <code>for</code>, the <code>try</code>,
+                            <code>catch</code>, and <code>finally</code> blocks must be
                             blocks, instead of single
                             statements
                     </ol>
@@ -103,25 +105,30 @@
                     <ol>
                         <li>
                             A catch block contains statements that specify what to do if an exception is thrown in the
-                            try block
+                            <code>try</code> block
                         <li>
                             If any statement
-                            within the try block (or in a function called from within the try block) throws an
+                            within the <code>try</code> block (or in a function called from within the <code>try</code>
+                            block) throws an
                             exception, control is immediately
-                            shifted to the catch block
+                            shifted to the <code>catch</code> block
                         <li>
-                            If no exception is thrown in the try block, the catch block is skipped
+                            If no exception is thrown in the <code>try</code> block, the <code>catch</code> block is
+                            skipped
                         <li>
-                            You can nest one or more try statements. If an inner try statement does not have a catch
-                            block, the enclosing try
-                            statement's catch block is used instead
+                            You can nest one or more <code>try</code> statements. If an inner <code>try</code> statement
+                            does not have a catch
+                            block, the enclosing <code>try</code>
+                            statement's <code>catch</code> block is used instead
                         <li>
-                            When an exception is thrown in the try block, exceptionVar (i.e., the e in catch (e)) holds
+                            When an exception is thrown in the <code>try</code> block, exceptionVar (i.e., the
+                            <code>e</code> in <code>catch(e)
+                            </code>) holds
                             the exception value
                         <li>
                             You can
                             use this binding to get information about the exception that was thrown. This binding is
-                            only available in the catch
+                            only available in the <code>catch</code>
                             block's scope
                         <li>
                             If you don't need the exception value, you can omit it along with the enclosing parentheses
@@ -140,22 +147,25 @@ try {
                     <h1 class="count">finally block</h1>
                     <ol>
                         <li>
-                            The finally block contains statements to execute after the try block and catch block(s)
+                            The <code>finally</code> block contains statements to execute after the <code>try</code>
+                            block and <code>catch</code> block(s)
                             execute, but before the
-                            statements following the try...catch...finally block
+                            statements following the <code>try...catch...finally</code> block
 
                         <li>
-                            Control flow will always enter the finally block, which can
+                            Control flow will always enter the <code>finally</code> block, which can
                             proceed in one of the following ways:
                             <ol>
                                 <li>
-                                    Immediately after the try block finishes execution normally (and no exceptions were
+                                    Immediately after the <code>try</code> block finishes execution normally (and no
+                                    exceptions were
                                     thrown)
                                 <li>
-                                    Immediately after the catch block finishes execution normally
+                                    Immediately after the <code>catch</code> block finishes execution normally
                                 <li>
                                     Immediately <strong>BEFORE</strong> the execution of a control-flow statement
-                                    (return, throw, break, continue) in the try block or catch
+                                    (<code>return</code>, <code>throw</code>, <code>break</code>, <code>continue</code>)
+                                    in the <code>try</code> block or <code>catch</code>
                                     block that would exit the block
                             </ol>
                     </ol>
@@ -168,14 +178,26 @@ try {
                     </ol>
                 </article> -->
                 <article>
-                    <h1 class="count">
-                        mnemonic
-                    </h1>
+                    <h1 class="count">mnemonic</h1>
                     <pre class="details-code-aclass">
 try catch(err) dotm dotn 
 
-(try catch (err) .message (description) .name (error name))
-                    </pre><!-- code-content -->
+try {
+
+} catch (err) {
+  err.name (error name)
+  err.message (description) 
+} </pre><!-- code-content -->
+                </article>
+                <article>
+                    <h1 class="count">Errors not caught by Catch</h1>
+                    <ol>
+                        <li>
+                            <code>Syntax errors</code> at parse time
+                        <li>
+                            If your code is invalid before it runs, the JS engine won't even start executing, so
+                            <code>try...catch</code> never gets a chance
+                    </ol>
                 </article>
 
                 <article>
@@ -342,8 +364,20 @@ Sophie</pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE THREE
-  </pre><!-- code-content -->
+try {
+
+  eval("let x = ");
+
+} catch (e) {
+
+  console.log(e.name);
+  console.log(e.message);
+
+} finally {
+
+  console.log("The End");
+
+} </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -354,11 +388,13 @@ INSERT CODE THREE
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-</pre><!-- small-view -->
+SyntaxError
+expected expression, got end of script
+The End </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-</pre><!-- wide-view -->
+SyntaxError
+expected expression, got end of script
+The End </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
